plugins {
    id 'java'
    id 'application'
    id 'com.gradleup.shadow' version '9.2.2'
    id 'com.github.ben-manes.versions' version '0.49.0'
}

group = 'com.github.fabienrenaud'
version = '8'

application {
    mainClass = 'com.github.fabienrenaud.jjb.Cli'
}

java {
    toolchain {
        sourceCompatibility = 17
        targetCompatibility = 17
    }
}

repositories {
    mavenCentral()
}

ext {
    avajeJsonVersion = '1.11'
    jacksonVersion = '2.17.1'
    dslJsonVersion = '2.0.2'
    johnzonVersion = '2.0.1'
    jmhVersion = '1.35'
}

dependencies {

    // CLI and misc
    implementation 'io.airlift:airline:0.9'
    implementation 'org.apache.commons:commons-lang3:3.12.0'

    // JSON libraries
    // In alphabetical order.

    // antons
    implementation 'io.github.antonsjava:json:1.17'
    // avaje-jsonb
    implementation "io.avaje:avaje-jsonb:${avajeJsonVersion}"
    implementation "io.avaje:avaje-jsonb-jackson:${avajeJsonVersion}"
    annotationProcessor "io.avaje:avaje-jsonb-generator:${avajeJsonVersion}"   
    // boon
    implementation 'io.fastjson:boon:0.34'
    // DSL-json
    implementation "com.dslplatform:dsl-json:${dslJsonVersion}"
    annotationProcessor "com.dslplatform:dsl-json:${dslJsonVersion}"
    // FastJson
    implementation 'com.alibaba.fastjson2:fastjson2:2.0.57'
    // FlexJson
    implementation 'net.sf.flexjson:flexjson:3.3'
    // GENSON
    implementation 'com.owlike:genson:1.6'
    // GSON
    implementation 'com.google.code.gson:gson:2.11.0'
    // Jackson
    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
    implementation "com.fasterxml.jackson.module:jackson-module-afterburner:${jacksonVersion}"
    implementation "com.fasterxml.jackson.module:jackson-module-blackbird:${jacksonVersion}"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"
    // jodd
    implementation 'org.jodd:jodd-json:6.0.3'
    // johnzon
    implementation "org.apache.johnzon:johnzon-core:${johnzonVersion}"
    implementation "org.apache.johnzon:johnzon-mapper:${johnzonVersion}"
    // Jakarta
    implementation 'jakarta.json.bind:jakarta.json.bind-api:3.0.1'
    implementation 'jakarta.json:jakarta.json-api:2.1.3'
    implementation 'org.glassfish:jakarta.json:2.0.1'
    // json-io
    implementation 'com.cedarsoftware:json-io:4.24.0'
    // json-simple
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
    // json-smart
    implementation 'net.minidev:json-smart:2.5.1'
    // LoganSquare
    implementation 'com.bluelinelabs:logansquare:1.3.7'
    annotationProcessor 'com.bluelinelabs:logansquare-compiler:1.3.7'
    // minimal-json
    implementation 'com.eclipsesource.minimal-json:minimal-json:0.9.5'
    // mjson
    implementation 'org.sharegov:mjson:1.4.1'
    // moshi
    implementation 'com.squareup.moshi:moshi:1.15.1'
    // nanojson
    implementation 'com.grack:nanojson:1.9'
    // org.json
    implementation 'org.json:json:20240303'
    // purejson
    implementation 'io.github.senthilganeshs:purejson:1.0.1'
    // qson
    implementation 'io.quarkus.qson:qson-generator:1.1.1.Final'
    // tapestry
    implementation 'org.apache.tapestry:tapestry-json:5.8.6'
    // underscore-java
    implementation 'com.github.javadev:underscore:1.101'
    // yasson
    implementation 'org.eclipse:yasson:3.0.3'
    // QuickBuffers
    implementation 'us.hebi.quickbuf:quickbuf-runtime:1.4'
    // wast
    implementation 'io.github.wycst:wast:0.0.29.1'
    // djomo
    implementation 'com.bigcloud.djomo:djomo:0.9.4'

    // Test
    testImplementation 'junit:junit:4.13.2'

    // IMPORTANT: Leave JMH at the end!
    // JMH
    implementation "org.openjdk.jmh:jmh-core:${jmhVersion}"
    annotationProcessor "org.openjdk.jmh:jmh-generator-annprocess:${jmhVersion}"
}

shadowJar {
    archiveFileName = 'app.jar'
    exclude 'META-INF/*.SF'
    exclude 'META-INF/*.DSA'
    exclude 'META-INF/*.RSA'
}

test {
    jvmArgs '--add-opens=java.base/java.time=ALL-UNNAMED --add-modules=jdk.incubator.vector'
    testLogging {
        exceptionFormat = 'full'
        showStandardStreams = true
    }
}

task (depsize) {
    doLast {
        def size = 0
        def formatStr = '%,10.2f'
        configurations.default.collect { it.length() / (1024 * 1024) }.each { size += it }

        def out = new StringBuffer()
        out << 'Total dependencies size:'.padRight(45)
        out << "${String.format(formatStr, size)} MiB\n\n"

        configurations
            .default
            .sort { -it.length() }
            .each {
                out << "${it.name}".padRight(45)
                out << "${String.format(formatStr, (it.length() / 1024))} KiB\n"
            }
            println(out)
    }
}
